--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">Content_Provider</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">SELF</string>
     <string name="action_settings">Settings</string>
 
     <string name="user_activity_str">User Activity</string>
@@ -9,9 +8,7 @@
     <string name="value_str">Value</string>
     <string name="stop_str">Stop</string>
 
-
-
-    <string name="ok_str">Ok</string>
+    <string name="ok_str">OK</string>
     <string name="manager_msg_str">Please install Gear Manager or Gear Fit Manager and Remote Sensor Service first. After that update / reinstall your application.</string>
     <string name="rss_msg_str">Please install Remote Sensor Service first. After that update / reinstall your application.</string>
     <string name="permission_msg_str">There is no permission to access the Remote Sensor Service. Please update / reinstall your application.</string>
@@ -22,7 +19,5 @@
     <string name="calendar_event">Calendar Event</string>
     <string name="title_activity_home">home</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
